# curxor-os

./: .gitattributes  .gitignore  README.md  build-out.txt  qa-out.txt  release-notes.json  typecheck-out.txt  version.json
docs/: AUDIT-REPORT.md  AUDIT-SCOPE-2026-06-23.md  FEATURE-FUNCTION.md  HOLDING-PATTERN.md  README.md
pillar-1-compute/: .env.example  README.md  docker-compose.yml
pillar-2-engine/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
pillar-3-telemetry/: .env.example  README.md  pyproject.toml
pillar-3-telemetry/scripts/: bench-motor-latency.sh  install.sh  verify-mesh.sh
pillar-3-telemetry/src/curxor_broker/: __init__.py  broker.py  capital_oauth.py  client.py  config.py  digital_bridges.py  digital_protocol.py  main.py  network.py  protocol.py  stack_main.py
pillar-3-telemetry/systemd/: curxor-telemetry-broker.service
pillar-3-telemetry/systemd/curxor-telemetry-broker.service.d/: iface.conf.example
pillar-4-dashboard/: .env.example  .env.local.example  .env.production  .gitignore  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
scripts/: apply-active-claw.sh  box-apply-deploy.sh  box-finish-deploy-sudo-override.sh  box-finish-sudo-override.sh  box-install-deploy-sudo-override.ps1  box-install-egress-wan.sh  box-install-ops-bridge.sh  box-install-sudo-override.ps1  box-install-swc-and-build.sh  box-smoke.sh  build-release-artifact.sh  copy-script-to-box.ps1  deploy-to-box.ps1  ensure-app-fre-dir.sh  install-all.sh  install-deploy-sudo-override.sh  install-ota-cron.sh  (+28 more)
(+1486 files in other folders)
